app/assets/stylesheets/layouts/l-about.scss
.l-about {
  // @include header_veil;

  .l-content {
    transform: translate(0, -50px);
  }

  .l-section {
    position: relative;
    padding: 0 0 25px;

    @media #{$mq-tablet} {
      padding: 0 0 60px;
    }

    &:not(:first-child) {
      margin: 25px 0 0;

      @media #{$mq-tablet} {
        margin: 70px 0 0;
      }
    }

    &::after {
      display: inline-block;
      position: absolute;
      bottom: 0;
      left: 0;
      width: 100%;
      height: 2px;
      background: rgba($color-1, .2);
      content: '';
    }

    &.-countries {
      position: relative;
      left: -10px;
      width: calc(100% + 20px);
      margin: 0;
      padding: 0 1%; // To compensate the wrapper on mobile
      background-size: 0 0;

      &:after { content: none; }

      @media #{$mq-tablet} {
        position: static;
        width: 100%;
        margin: 60px 0 0;
        padding: 0 40px 60px 0;
        background-repeat: no-repeat;
        background-position: right center;
        background-size: 50% auto;
        background-origin: content-box;
      }

      @media #{$mq-desktop} {
        background-size: auto;
      }
    }

    &.-insights {
      .c-card-highlight {
        margin-bottom: 20px;

        &:nth-of-type(3) {
          .image-container {
            background-position-y: -80px;
          }
        }
      }
    }

    &.-team,
    &.-advisory {
      &:after { content: none; }

      @media #{$mq-tablet} {
        &:after { content: ''; }
      }
    }

    &.-contact {
      &:after { content: none; }

      .l-section-description {
        margin-bottom: 30px;

        @media #{$mq-tablet} {
          margin-bottom: 0;
        }
      }
    }

    .section-description {
      margin: 30px 0 0;
      color: $color-1;
      font-family: $font-family-2;
      font-size: $font-size-xs;
      text-align: center;
    }
  }

  .l-section-description {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .l-staff-grid {
    margin: 25px 0 0;

    @media #{$mq-tablet} {
      margin: 60px 0 0;
    }
  }

  .l-addresses {
    @media #{$mq-tablet} {
      display: flex;
      justify-content: center;
      margin: 60px 0 0;
    }

    .c-address {
      margin-top: 20px;

      @media #{$mq-tablet} {
        margin-top: 0;
      }
    }
  }

  .l-form-contact {
    display: flex;
    justify-content: center;

    @media #{$mq-tablet} {
      margin: 40px 0 0;
    }

    .contact-form {
      textarea {
        height: 165px;
      }

      input:focus:invalid {
        border: 1px solid $color-10;
      }

      .message {
        margin-top: 30px;
        padding: 15px 20px;
        font-family: $font-family-2;

        @media #{$mq-tablet} {
          margin-top: 0;
        }

        &.-info {
          border-left: 3px solid $color-1;
          background-color: rgba($color-1, .3);
        }

        &.-error {
          border-left: 3px solid $color-10;
          background-color: rgba($color-10, .1);
          color: $color-10;
        }
      }

      > .footer-form {
        margin: 30px 0 0;
        text-align: center;

        @media #{$mq-tablet} {
          margin: 50px 0 0;
        }

        button {
          width: 100%;
          text-align: center;

          @media #{$mq-tablet} {
            width: auto;
          }

          span {
            display: inline-block;
            width: 12px;
            height: 12px;
            margin-right: 15px;
            border-radius: 100%;
            background-color: $color-4;
            opacity: 0;
            animation-name: dot;
            animation-duration: 1.5s;
            animation-iteration-count: infinite;

            &:nth-of-type(2) {
              animation-delay: .5s;
            }

            &:last-of-type {
              margin-right: 0;
              animation-delay: 1s;
            }


            @keyframes dot {
              0%   {opacity: 0;}
              33%  {opacity: 1; }
              66%  {opacity: 0;}
              100% {opacity: 0;}
            }
          }
        }
      }
    }
  }
}

